--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {% for jogo in jogos %}
-    <dir><p>{{ jogo.nome }} - {{ jogo.categoria }}</p></dir>
-    {% endfor %}
+    <div id="container">
+        {% for jogo in jogos %}
+        <dir><p>{{ jogo.nome }} - {{ jogo.categoria }}</p></dir>
+        {% endfor %}
+    </div>
+
+    <style>
+        #container {
+            border: 1px solid red;
+        }
+    </style>
 {% endblock %}
