--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,7 +8,8 @@
         <h1>GoodBrowserGames</h1>
         <div>
             <a href="{{ url_for('index') }}">Home</a> | 
-            <a href="{{ url_for('cadastrar_jogo') }}">Cadastrar jogo</a>
+            <a href="{{ url_for('cadastrar_jogo') }}">Cadastrar jogo</a> |
+            <a href="{{ url_for('login') }}">Entrar</a>
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
