--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,7 +19,9 @@
                     <span style="color: red;">[{{ error }}]</span>
                 {% endfor %}
             </p>
+            <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
             <p>{{ form.submit() }}</p>
+            <p>Novo usuário? <a href="{{ url_for('registrar') }}">Cadastre-se!</a></p>
         </form>
     </div>
 
