--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,7 @@
         <div>
             <a href="{{ url_for('index') }}">Home</a> | 
             <a href="{{ url_for('cadastrar_jogo') }}">Cadastrar jogo</a> |
+            <a href="{{ url_for('listar_categorias') }}">Categorias</a> |
             <span style="position: absolute; right: 50px;">
                 {% if current_user.is_anonymous %}
                 <a href="{{ url_for('login') }}">Entrar</a>
