--- a/app/templates/cadastro_jogo.html
+++ b/app/templates/cadastro_jogo.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div id="container">
         <h1>Cadastrar Jogo</h1>
-        <form action="" method="post" novalidate>
+        <form action="" method="post">
             <p>
                 {{ form.nome.label }}<br>
                 {{ form.nome(size=32) }}<br>
